--- a/_layouts/bootcamp.html
+++ b/_layouts/bootcamp.html
@@ -25,6 +25,7 @@
 	      <h2>A Data Carpentry Workshop</h2>
 	      <h4>Organized by and for interdisciplinary
           biologists and environmental scientists.</h4>
+              {% if page.sponsors %}<h2>{{page.sponsors}}</h2>{% endif %}
               <h2>{{page.venue}}</h2>
               {% if page.address %}{{page.address}}<br/>{% endif %}
               {{page.humandate}}
